[gd_scene load_steps=4 format=3 uid="uid://dge66doklg3yy"]

[ext_resource type="Script" path="res://MultiplayerController.gd" id="1_m7uyd"]
[ext_resource type="Script" path="res://ServerBrowser.gd" id="2_41bce"]
[ext_resource type="PackedScene" uid="uid://bd8mq0quyhn4n" path="res://server_info.tscn" id="3_v7fsi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m7uyd")
metadata/_edit_horizontal_guides_ = []

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 77.0
offset_right = 213.0
offset_bottom = 142.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 229.0
offset_top = 81.0
offset_right = 382.0
offset_bottom = 146.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 409.0
offset_top = 83.0
offset_right = 595.0
offset_bottom = 148.0
text = "Start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 26.0
offset_right = 317.0
offset_bottom = 57.0
text = "Player1"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 25.0
offset_right = 92.0
offset_bottom = 51.0
text = "Name:"

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_41bce")
serverInfo = ExtResource("3_v7fsi")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Label2" type="Label" parent="ServerBrowser"]
layout_mode = 0
offset_left = 742.0
offset_top = 43.0
offset_right = 951.0
offset_bottom = 133.0

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = 16.0
offset_top = 172.0
offset_right = 697.0
offset_bottom = 494.0

[node name="ServerInfo" type="HBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 2
offset_left = 1.0
offset_top = -1.0
offset_right = 681.0
offset_bottom = 27.0

[node name="Name" type="Label" parent="ServerBrowser/Panel/ServerInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="Ip" type="Label" parent="ServerBrowser/Panel/ServerInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP"

[node name="PlayerCount" type="Label" parent="ServerBrowser/Panel/ServerInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Count"

[node name="PlayerCount2" type="Label" parent="ServerBrowser/Panel/ServerInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 52.0
offset_right = 680.0
offset_bottom = 320.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 20.0
offset_right = 548.0
offset_bottom = 59.0
text = "Test add player (host)"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
